<resources>
    <string name="app_name">Kesk\'heu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Application Kesk\'heu</string>
    <string name="nav_header_subtitle">PST 3A</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètres</string>

    <string name="Boutton_Utilisateur">Valider</string>

    <string name="Boutton_DemandeQuestion">Valider</string>
    <string name="EntreeDemandeQuestion">Numero de question voulue</string>

    <string name="EntreeUser">Ecrivez votre question ici</string>
    <string name="action_EntreeUser">Ecrivez</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_gallery">Questions</string>
    <string name="menu_slideshow">Les questions</string>
    <string name="textview">TextView</string>
    <string name="button">Synchronisation</string>
    <string name="Test_Bouton">Test</string>
</resources>