<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.SlideshowFragment">

    <TextView
        android:id="@+id/text_slideshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/Nbr_question"
        android:layout_width="318dp"
        android:layout_height="31dp"
        android:layout_marginBottom="476dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/DemandeQuestion"
        android:layout_width="325dp"
        android:layout_height="27dp"
        android:layout_marginTop="108dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/EntreDemandeQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_slideshow"
        app:layout_constraintVertical_bias="0.605" />

    <EditText
        android:id="@+id/EntreDemandeQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="264dp"
        android:ems="10"
        android:hint="@string/EntreeUser"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/EntreeDemandeQuestion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Boutton_DemandeQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Boutton_DemandeQuestion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DemandeQuestion"
        app:layout_constraintVertical_bias="0.567" />
</androidx.constraintlayout.widget.ConstraintLayout>