<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="600dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Refresh_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="180dp"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home" />

    <TextView
        android:id="@+id/Reponse_Serveur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="95dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Refresh_list"
        app:layout_constraintTop_toBottomOf="@+id/text_home" />

    <Button
        android:id="@+id/BoutonNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="51dp"
        android:text="@string/Test_Bouton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toEndOf="@+id/Refresh_list"
        app:layout_constraintTop_toBottomOf="@+id/text_home" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/NouvelleRecyclerView"
        android:layout_width="304dp"
        android:layout_height="459dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BoutonNombre" />

    <LinearLayout
        android:id="@+id/LayoutRecyclerView"
        android:layout_width="290dp"
        android:layout_height="435dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BoutonNombre"
        app:layout_constraintVertical_bias="0.523"></LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>